# rust_nn_pc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
rust_nn_pc/: Cargo.toml
rust_nn_pc/src/: attention.rs  lib.rs  matrix.rs  network.rs  pc_layer.rs
test_enviorment/: Cargo.toml
test_enviorment/src/: main.rs
test_enviornment/: Cargo.toml
test_enviornment/src/: main.rs
