[package]
name = "rust_nn_pc"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
rand = "0.9"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
