[package]
name = "test_enviornment"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_nn_pc = { path = "../rust_nn_pc" }
tch = { version = "0.20", features = ["download-libtorch"] }

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
